[gd_scene load_steps=29 format=3 uid="uid://ciugbodw8mi37"]

[ext_resource type="Script" path="res://Scripts/Combat/CombatServices.gd" id="1_4mlhq"]
[ext_resource type="Script" path="res://Scripts/Combat/CombatMaster.gd" id="1_dhfxj"]
[ext_resource type="Script" path="res://Scripts/Combat/Master.gd" id="1_sxo8n"]
[ext_resource type="PackedScene" uid="uid://ddtqif4awfut8" path="res://Scenes/Combat/Maps/House.tscn" id="4_enk31"]
[ext_resource type="Script" path="res://Scripts/Combat/CameraController.gd" id="6_fci4t"]
[ext_resource type="Script" path="res://Scripts/UI/UI.gd" id="7_1n7qw"]
[ext_resource type="Texture2D" uid="uid://4rd7tn4yi1a5" path="res://Assets/Cards/CardBack.png" id="7_r3m1s"]
[ext_resource type="Texture2D" uid="uid://cgwm6p4ij0hor" path="res://Assets/UI/buttonsBacking.png" id="12_qvul0"]
[ext_resource type="PackedScene" uid="uid://cm7uxw0cq0ymo" path="res://Scenes/Combat/Card.tscn" id="12_sgxv5"]
[ext_resource type="Script" path="res://Scripts/UI/StatusList.gd" id="13_f0k7s"]
[ext_resource type="Texture2D" uid="uid://b0ysn17tln0ra" path="res://Assets/Cards/CardsHistory.png" id="13_ln8h3"]
[ext_resource type="Script" path="res://Scripts/CardsList.gd" id="17_ntqgl"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_htd1i"]
properties/0/path = NodePath("Node2D/Combat/Services:currentTurn")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5us63"]
size = Vector2(2089, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5kpx"]
size = Vector2(2112, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lpri0"]
size = Vector2(20, 1604)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04n40"]
size = Vector2(20, 1527.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_fwjjm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gb65e"]
size = Vector2(1153, 26.4707)

[sub_resource type="Animation" id="Animation_uwwqy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationCard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(885, 1070)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationCard")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"resetCard"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationCard:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationCard:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimationCard:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(550, 917)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationCard:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ColorRect:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.411765, 0.411765, 0.411765, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ColorRect:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ui3hi"]
resource_name = "cancelHistory"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.411765, 0.411765, 0.411765, 0.647059), Color(0.411765, 0.411765, 0.411765, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ScrollContainer/CardsList")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hideHistory"
}]
}

[sub_resource type="Animation" id="Animation_c3r6n"]
resource_name = "cancelInspect"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationCard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 199), Vector2(-512, 199)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationCard:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.7, 2.7)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationCard")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"coverInspect"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.411765, 0.411765, 0.411765, 0.647059), Color(0.411765, 0.411765, 0.411765, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7pac3"]
resource_name = "cancelStatus"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.411765, 0.411765, 0.411765, 0.647059), Color(0.411765, 0.411765, 0.411765, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StatusList")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hideStatusIcons"
}]
}

[sub_resource type="Animation" id="Animation_m0xhm"]
resource_name = "inspectCard"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationCard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(320, 917), Vector2(320, 199), Vector2(320, 231)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationCard:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.7, 2.7)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationCard")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.55),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"flipInspect"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.411765, 0.411765, 0.411765, 0), Color(0.411765, 0.411765, 0.411765, 0.647059)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2li0y"]
resource_name = "inspectStatus"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.411765, 0.411765, 0.411765, 0), Color(0.411765, 0.411765, 0.411765, 0.647059)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StatusList")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"animateStatusIcons"
}]
}

[sub_resource type="Animation" id="Animation_3pcb3"]
resource_name = "openHistory"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.411765, 0.411765, 0.411765, 0), Color(0.411765, 0.411765, 0.411765, 0.647059)]
}

[sub_resource type="Animation" id="Animation_3dexj"]
resource_name = "useCard"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationCard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1.25, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(96, 731), Vector2(96, 478), Vector2(96, 493), Vector2(96, 493), Vector2(-109, 493)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationCard")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.45, 1.25),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"flipCard"
}, {
"args": [],
"method": &"coverCard"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationCard:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 3.05176e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationCard:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ms5we"]
_data = {
"RESET": SubResource("Animation_uwwqy"),
"cancelHistory": SubResource("Animation_ui3hi"),
"cancelInspect": SubResource("Animation_c3r6n"),
"cancelStatus": SubResource("Animation_7pac3"),
"inspectCard": SubResource("Animation_m0xhm"),
"inspectStatus": SubResource("Animation_2li0y"),
"openHistory": SubResource("Animation_3pcb3"),
"useCard": SubResource("Animation_3dexj")
}

[node name="Master" type="Node2D"]
script = ExtResource("1_sxo8n")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_htd1i")

[node name="Combat" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_dhfxj")

[node name="Services" type="Node" parent="Combat"]
unique_name_in_owner = true
script = ExtResource("1_4mlhq")

[node name="Environment" parent="Combat" instance=ExtResource("4_enk31")]
unique_name_in_owner = true

[node name="CameraBounds" type="StaticBody2D" parent="Combat"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Combat/CameraBounds"]
position = Vector2(824.5, -151)
shape = SubResource("RectangleShape2D_5us63")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Combat/CameraBounds"]
position = Vector2(833, 1303)
shape = SubResource("RectangleShape2D_m5kpx")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Combat/CameraBounds"]
position = Vector2(-151, 579)
shape = SubResource("RectangleShape2D_lpri0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Combat/CameraBounds"]
position = Vector2(1814, 588.25)
shape = SubResource("RectangleShape2D_04n40")

[node name="Camera" type="CharacterBody2D" parent="Combat"]
unique_name_in_owner = true
position = Vector2(1280, 320)
script = ExtResource("6_fci4t")

[node name="Camera2D" type="Camera2D" parent="Combat/Camera"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Combat/Camera"]
shape = SubResource("CircleShape2D_fwjjm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Combat/Camera"]
shape = SubResource("CircleShape2D_fwjjm")

[node name="UI" type="CanvasLayer" parent="Combat"]

[node name="UI" type="Control" parent="Combat/UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_top = 555.0
offset_right = 1024.0
offset_bottom = 803.0
mouse_filter = 1
script = ExtResource("7_1n7qw")

[node name="Hand" type="HBoxContainer" parent="Combat/UI/UI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 123.0
offset_top = 92.0
offset_right = 1210.0
offset_bottom = 213.0
scale = Vector2(0.965545, 1)
alignment = 1

[node name="CardBack" type="Sprite2D" parent="Combat/UI/UI"]
position = Vector2(63, 128)
scale = Vector2(1.2, 1.2)
texture = ExtResource("7_r3m1s")

[node name="CardsLabel" type="RichTextLabel" parent="Combat/UI/UI/CardBack"]
offset_left = -39.1667
offset_top = -64.1667
offset_right = 253.833
offset_bottom = -10.1667
scale = Vector2(0.28, 0.28)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 40
text = "Cards Left: "

[node name="APLabel" type="RichTextLabel" parent="Combat/UI/UI/CardBack"]
offset_left = -39.0
offset_top = 47.0
offset_right = 247.0
offset_bottom = 107.0
scale = Vector2(0.28, 0.28)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 40
text = "AP:  30/30"

[node name="HPLabel" type="RichTextLabel" parent="Combat/UI/UI/CardBack"]
offset_left = -39.0
offset_top = 33.6666
offset_right = 247.0
offset_bottom = 93.6666
scale = Vector2(0.28, 0.28)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 40
text = "HP:  20/20"

[node name="Buttons" type="Control" parent="Combat/UI/UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 124.0
offset_top = -22.0
offset_right = 164.0
offset_bottom = 18.0

[node name="buttonsBacking" type="Sprite2D" parent="Combat/UI/UI/Buttons"]
position = Vector2(958, 147)
texture = ExtResource("12_qvul0")

[node name="EndTurn" type="Button" parent="Combat/UI/UI/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.271
anchor_bottom = 1.213
offset_left = 964.0
offset_top = 105.0
offset_right = 963.16
offset_bottom = 87.48
text = "Turn"

[node name="Draw" type="Button" parent="Combat/UI/UI/Buttons"]
layout_mode = 0
offset_left = 902.0
offset_top = 105.0
offset_right = 952.0
offset_bottom = 136.0
mouse_filter = 1
action_mode = 0
text = "Draw"

[node name="Shuffle" type="Button" parent="Combat/UI/UI/Buttons"]
visible = false
layout_mode = 0
offset_left = 901.0
offset_top = 105.0
offset_right = 964.0
offset_bottom = 144.0
scale = Vector2(0.8, 0.8)
mouse_filter = 1
action_mode = 0
text = "Shuffle"

[node name="Move" type="Button" parent="Combat/UI/UI/Buttons"]
layout_mode = 0
offset_left = 902.0
offset_top = 156.0
offset_right = 952.0
offset_bottom = 187.0
mouse_filter = 1
action_mode = 0
text = "Move"

[node name="Status" type="Button" parent="Combat/UI/UI/Buttons"]
layout_mode = 0
offset_left = 963.0
offset_top = 156.0
offset_right = 1014.0
offset_bottom = 187.0
scale = Vector2(0.9, 1)
mouse_filter = 1
action_mode = 0
text = "Status"

[node name="CardsHistory" type="TextureButton" parent="Combat/UI/UI/Buttons"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -6.0
offset_top = 202.0
offset_right = 58.0
offset_bottom = 266.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("13_ln8h3")

[node name="RaiseArea" type="Area2D" parent="Combat/UI/UI"]
position = Vector2(77, -99)
scale = Vector2(1.04, 2.04)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Combat/UI/UI/RaiseArea"]
position = Vector2(504.5, 72.549)
shape = SubResource("RectangleShape2D_gb65e")

[node name="ScreenFX" type="CanvasLayer" parent="Combat"]

[node name="ColorRect" type="ColorRect" parent="Combat/ScreenFX"]
visible = false
offset_left = -156.0
offset_top = -64.0
offset_right = 1335.0
offset_bottom = 774.0
mouse_filter = 1
color = Color(0.411765, 0.411765, 0.411765, 0)

[node name="ScreenAnimations" type="AnimationPlayer" parent="Combat/ScreenFX"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ms5we")
}

[node name="AnimationCard" parent="Combat/ScreenFX" instance=ExtResource("12_sgxv5")]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = 593.0
offset_right = 54.0
offset_bottom = 593.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disableUse = true

[node name="StatusList" type="VBoxContainer" parent="Combat/ScreenFX"]
unique_name_in_owner = true
offset_left = 986.0
offset_top = 63.0
offset_right = 1026.0
offset_bottom = 117.0
scale = Vector2(3, 3)
script = ExtResource("13_f0k7s")

[node name="ScrollContainer" type="ScrollContainer" parent="Combat/ScreenFX"]
clip_contents = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -517.0
offset_top = -360.0
offset_right = 1048.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardsList" type="VBoxContainer" parent="Combat/ScreenFX/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 150
script = ExtResource("17_ntqgl")

[connection signal="pressed" from="Combat/UI/UI/Buttons/EndTurn" to="Combat/UI/UI" method="_on_end_turn_pressed"]
[connection signal="pressed" from="Combat/UI/UI/Buttons/Draw" to="Combat/UI/UI" method="_on_DrawButton_pressed"]
[connection signal="pressed" from="Combat/UI/UI/Buttons/Shuffle" to="Combat/UI/UI" method="_on_shuffle_pressed"]
[connection signal="pressed" from="Combat/UI/UI/Buttons/Move" to="Combat/UI/UI" method="_on_move_pressed"]
[connection signal="pressed" from="Combat/UI/UI/Buttons/Status" to="Combat/UI/UI" method="_on_status_pressed"]
[connection signal="pressed" from="Combat/UI/UI/Buttons/CardsHistory" to="Combat/UI/UI" method="_on_cards_history_pressed"]
[connection signal="mouse_entered" from="Combat/UI/UI/RaiseArea" to="Combat/UI/UI" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Combat/UI/UI/RaiseArea" to="Combat/UI/UI" method="_on_area_2d_mouse_exited"]
